[WPE] REGRESSION(274544@main): Build fails due to Clang -Wcast-align errors https://bugs.webkit.org/show_bug.cgi?id=269360

Unreviewed build fix.

Use "pragma clang diagnostic" to silence -Wcast-align warnings being
treated as errors. The IGNORE_CLANG_WARNINGS_{BEGIN,END} macros are not
used in this instance because none of the affected sources are supposed
to use WTF. No additional guards are needed to use the pragmas, because
compilers are expected to ignore an unknown #pragma.

* Tools/ImageDiff/skia/PlatformImageSkia.cpp:
* Tools/wpe/backends/fdo/HeadlessViewBackendFdo.cpp:

Canonical link: https://commits.webkit.org/274624@main